fix: overlays overflow

--- a/frontend/src/styles/index.sass
+++ b/frontend/src/styles/index.sass
@@ -61,7 +61,7 @@ hr.separator
 	min-height: 100%
 	min-width: 100%
 	padding: 2rem
-	contain: strict
+	contain: layout paint
 	overscroll-behavior: none
 	scrollbar-gutter: stable
 	> .background
